--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap");
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   outline: none !important;
 }
 
@@ -12,14 +14,12 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
 .logo {
   cursor: pointer;
 }
 
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 ul {
@@ -44,17 +44,14 @@ ul {
 
 .sub-header {
   font-family: "Open Sans";
-}
 
-.sub-header.link {
-  text-transform: uppercase;
+  &.link {
+    text-transform: uppercase;
+  }
+  &.product {
+    font-weight: 300;
+  }
+  &.price {
+    font-weight: bold;
+  }
 }
-
-.sub-header.product {
-  font-weight: 300;
-}
-
-.sub-header.price {
-  font-weight: bold;
-}
-/*# sourceMappingURL=globals.css.map */
