--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -47,6 +47,7 @@ ul {
 
   &.link {
     text-transform: uppercase;
+    font-size: 2rem;
   }
   &.product {
     font-weight: 300;
@@ -54,4 +55,15 @@ ul {
   &.price {
     font-weight: bold;
   }
+}
+
+.background-text {
+  //transform-origin: center;
+  font-size: 15vw;
+  color: rgba(139, 199, 255, 0.2);
+  z-index: -1;
+  margin-block-start: 0 !important;
+  margin-block-end: 0 !important;
+  margin-bottom: 30px;
+  height: 100px;
 }
