--- a/styles/css/globals.scss
+++ b/styles/css/globals.scss
@@ -44,7 +44,13 @@ ul {
 
 .sub-header {
   font-family: "Open Sans";
-
+  &.nav-link {
+    font-size: 1.5rem;
+    font-weight: lighter;
+    margin: 0 0.5rem;
+    user-select: none;
+    cursor: pointer;
+  }
   &.link {
     text-transform: uppercase;
     font-size: 2rem;
