--- a/styles/css/globals.css
+++ b/styles/css/globals.css
@@ -53,12 +53,8 @@ ul {
 
 :root {
   --primary: white;
-  --secondary: #dc3240;
+  --secondary: rgba(139, 199, 255, 0.2);
   --shadow: 0px 8px 30px rgba(0, 0, 0, 0.12);
-}
-
-.secondary {
-  color: var(--secondary);
 }
 
 .header {
@@ -97,7 +93,7 @@ ul {
 
 .background-text {
   font-size: 15vw;
-  color: rgba(139, 199, 255, 0.2);
+  color: rgba(0, 0, 0, 0.9);
   z-index: -1;
   -webkit-margin-before: 0 !important;
           margin-block-start: 0 !important;
@@ -105,5 +101,13 @@ ul {
           margin-block-end: 0 !important;
   margin-bottom: -200px;
   height: 100px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.background-text.blue {
+  color: var(--secondary);
 }
 /*# sourceMappingURL=globals.css.map */
