--- a/styles/css/globals.scss
+++ b/styles/css/globals.scss
@@ -44,6 +44,9 @@ a {
 
 ul {
   list-style: none;
+  margin-block-start: 0em !important;
+  margin-block-end: 0em !important;
+  padding-inline-start: 0px !important;
 }
 
 :root {
